# deepc

./: CMakeLists.txt  Tensorv1.cpp  Value.cpp  matmulv0.cu  matmulv1_general.cu  mnist_loader.cpp
src/cpp/: Tensorv1.cpp  Value.cpp  mnist_loader.cpp
src/cuda/: pmpp_matmul_v0.cu  pmpp_matmul_v1.cu
src/headers/: mnist_loader.h
